# ChangeLog for app-text/dvipng
# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: /usr/local/ssd/gentoo-x86/output/app-text/cvs-repo/gentoo-x86/app-text/dvipng/ChangeLog,v 1.17 2007/10/14 18:27:05 aballier Exp $

  14 Oct 2007; Alexis Ballier <aballier@gentoo.org> dvipng-1.8.ebuild,
  dvipng-1.9.ebuild:
  virtual/tetex -> virtual/latex-base, quote D

  15 May 2007; Christian Faulhammer <opfer@gentoo.org> metadata.xml,
  dvipng-1.8.ebuild, dvipng-1.9.ebuild:
  added check for jpeg and png USE flags enabled in media-libs/gd; added emacs
  team to metadata.xml

  06 May 2007; Markus Rothe <corsair@gentoo.org> dvipng-1.8.ebuild:
  Stable on ppc64; bug #177348

  12 Mar 2007; Alexandre Buisse <nattfodd@gentoo.org> metadata.xml:
  Replaced text-markup by tex as maintaining herd (text-markup split).

*dvipng-1.9 (08 Feb 2007)

  08 Feb 2007; Christian Faulhammer <opfer@gentoo.org> -dvipng-1.5.ebuild,
  -dvipng-1.7.ebuild, +dvipng-1.9.ebuild:
  clean up a bit; version bump: added some quotes around variable; fixes bug
  #155033

  23 Nov 2006; Tobias Scherbaum <dertobi123@gentoo.org> dvipng-1.8.ebuild:
  ppc stable, bug #154240

  23 Nov 2006; <blubb@gentoo.org> dvipng-1.8.ebuild:
  stable on amd64

  15 Nov 2006; Gustavo Zacarias <gustavoz@gentoo.org> dvipng-1.8.ebuild:
  Stable on sparc wrt #154240

  07 Nov 2006; Christian Faulhammer <opfer@gentoo.org> dvipng-1.8.ebuild:
  stable x86, bug #154240

  25 Jun 2006; Tobias Scherbaum <dertobi123@gentoo.org> dvipng-1.8.ebuild:
  Added ~ppc, bug #131761

  19 Jun 2006; Markus Rothe <corsair@gentoo.org> dvipng-1.8.ebuild:
  Added ~ppc64; bug #131761

  11 Apr 2006; Ferris McCormick <fmccor@gentoo.org> ChangeLog:
  Fix spelling error in ChangeLog entry.

  11 Apr 2006; Ferris McCormick <fmccor@gentoo.org> dvipng-1.8.ebuild:
  Add ~sparc keyword.  This package is required for app-text/tetex-3.0_p1-r3 to
  retain functionality, as tetex relies on this package for dvipng capability.